--- a/src/assets/i18n/ms.json
+++ b/src/assets/i18n/ms.json
@@ -2,10 +2,17 @@
 	"solatku.info_section.button.change_zone.hint": "Tukar Zon",
 	"solatku.info_section.button.change_zone.label": "Tukar Zon",
 	"solatku.info_section.countdown.hour": "jam",
+	"solatku.info_section.countdown.hour_singular": "jam",
 	"solatku.info_section.countdown.minute": "minit",
+  "solatku.info_section.countdown.minute_singular": "minit",
 	"solatku.info_section.countdown.remaining": "lagi",
 	"solatku.info_section.countdown.second": "saat",
+  "solatku.info_section.countdown.second_singular": "saat",
 	"solatku.info_section.title.label": "Waktu seterusnya",
+  "solatku.zone_switcher_section.hint.change_language": "Tukar Bahasa",
+  "solatku.zone_switcher_section.hint.change_theme": "Tukar Tema",
+  "solatku.zone_switcher_section.change_language.english": "Inggeris",
+  "solatku.zone_switcher_section.change_language.malay": "Melayu",
 	"solatku.prayer.time.asr": "Asar",
 	"solatku.prayer.time.fajr": "Subuh",
 	"solatku.prayer.time.imsak": "Imsak",
@@ -18,5 +25,6 @@
 	"solatku.toastr.title.error": "Ralat",
 	"solatku.toastr.title.success": "Berjaya",
 	"solatku.toastr.zone_switcher_section.error_msg": "Zon tidak wujud.",
+  "solatku.toastr.zone_switcher_section.language_change_success_msg": "Bahasa telah berjaya ditukar.",
 	"solatku.zone_switcher_section.button": "Tukar"
 }
