--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,6 +9,7 @@
 	"solatku.info_section.countdown.second": "seconds",
   "solatku.info_section.countdown.second_singular": "second",
 	"solatku.info_section.title.label": "Next prayer",
+  "solatku.zone_switcher_section.hint.check_update": "Check for updates",
   "solatku.zone_switcher_section.hint.change_language": "Change Language",
   "solatku.zone_switcher_section.hint.change_theme": "Change Theme",
   "solatku.zone_switcher_section.change_language.english": "English",
