--- a/src/assets/i18n/ms.json
+++ b/src/assets/i18n/ms.json
@@ -9,6 +9,7 @@
 	"solatku.info_section.countdown.second": "saat",
   "solatku.info_section.countdown.second_singular": "saat",
 	"solatku.info_section.title.label": "Waktu seterusnya",
+  "solatku.zone_switcher_section.hint.check_update": "Semak Kemas Kini",
   "solatku.zone_switcher_section.hint.change_language": "Tukar Bahasa",
   "solatku.zone_switcher_section.hint.change_theme": "Tukar Tema",
   "solatku.zone_switcher_section.change_language.english": "Inggeris",
