--- a/src/assets/i18n/ms.json
+++ b/src/assets/i18n/ms.json
@@ -9,11 +9,20 @@
 	"solatku.info_section.countdown.second": "saat",
   "solatku.info_section.countdown.second_singular": "saat",
 	"solatku.info_section.title.label": "Waktu seterusnya",
-  "solatku.zone_switcher_section.hint.check_update": "Semak Kemas Kini",
+
   "solatku.zone_switcher_section.hint.change_language": "Tukar Bahasa",
   "solatku.zone_switcher_section.hint.change_theme": "Tukar Tema",
+  "solatku.zone_switcher_section.hint.change_zone": "Pilih Zon",
   "solatku.zone_switcher_section.change_language.english": "Inggeris",
   "solatku.zone_switcher_section.change_language.malay": "Melayu",
+  "solatku.zone_switcher_section.button": "Tukar",
+
+  "solatku.check_update_section.title": "Semak Kemas Kini",
+  "solatku.check_update_section.have_update": "Versi baharu aplikasi Solatku telah dikeluarkan. Adakah anda ingin mengemas kini aplikasi Solatku?",
+  "solatku.check_update_section.no_update": "Tiada versi baharu aplikasi Solatku dikeluarkan. Anda menggunakan versi terkini.",
+  "solatku.check_update_section.button.confirm": "Ya",
+  "solatku.check_update_section.button.cancel": "Tidak",
+
 	"solatku.prayer.time.asr": "Asar",
 	"solatku.prayer.time.fajr": "Subuh",
 	"solatku.prayer.time.imsak": "Imsak",
@@ -26,6 +35,5 @@
 	"solatku.toastr.title.error": "Ralat",
 	"solatku.toastr.title.success": "Berjaya",
 	"solatku.toastr.zone_switcher_section.error_msg": "Zon tidak wujud.",
-  "solatku.toastr.zone_switcher_section.language_change_success_msg": "Bahasa telah berjaya ditukar.",
-	"solatku.zone_switcher_section.button": "Tukar"
+  "solatku.toastr.zone_switcher_section.language_change_success_msg": "Bahasa telah berjaya ditukar."
 }
