update translation files

--- a/src/assets/i18n/ms.json
+++ b/src/assets/i18n/ms.json
@@ -17,6 +17,9 @@
   "solatku.zone_switcher_section.change_language.malay": "Melayu",
   "solatku.zone_switcher_section.button": "Tukar",
 
+  "solatku.check_install_section.title": "Muat Turun Aplikasi",
+
+
   "solatku.check_update_section.title": "Semak Kemas Kini",
   "solatku.check_update_section.have_update": "Versi baharu aplikasi Solatku telah dikeluarkan. Adakah anda ingin mengemas kini aplikasi Solatku?",
   "solatku.check_update_section.no_update": "Tiada versi baharu aplikasi Solatku dikeluarkan. Anda menggunakan versi terkini.",
