--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,6 +10,8 @@
   "solatku.info_section.countdown.second_singular": "second",
 	"solatku.info_section.title.label": "Next prayer",
 
+  "solatku.check_install_section.title": "Install the app",
+
   "solatku.check_update_section.title": "Check for updates",
   "solatku.zone_switcher_section.hint.change_language": "Change Language",
   "solatku.zone_switcher_section.hint.change_theme": "Change Theme",
